<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_marginTop="0dp"
        android:background="@color/orange">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:contentDescription="@string/logo_partial"
            android:layout_height="match_parent"
            android:paddingTop="2dp"
            android:src="@drawable/logo2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:fontFamily="@font/voltaireregular"
            android:text="@string/the_daily_wave"
            android:textColor="@color/white"
            android:textSize="25sp" />

    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabs"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_below="@+id/toolbar"
        android:layout_marginTop="0dp"
        android:backgroundTint="@color/white"
        app:tabIndicatorAnimationMode="elastic"
        app:tabIndicatorColor="@color/orange"
        app:tabIndicatorHeight="3dp"
        app:tabSelectedTextColor="@color/black"
        app:tabTextColor="#7F8487"
        app:tabMode="scrollable"
        app:tabRippleColor="@color/material_dynamic_neutral80"
        app:tabIndicatorFullWidth="true" >

        <com.google.android.material.tabs.TabItem
            android:id="@+id/home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/home">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/sports"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sports">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/health"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/health">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/science"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/science">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/entertainment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/entertainment">

        </com.google.android.material.tabs.TabItem>

        <com.google.android.material.tabs.TabItem
            android:id="@+id/technology"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/technology">

        </com.google.android.material.tabs.TabItem>

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/tabs"
        android:layout_marginTop="0dp"
        android:id="@+id/fragment_container" >

    </androidx.viewpager2.widget.ViewPager2>

</RelativeLayout>